--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
