--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@types/react-color": "^3.0.6",
     "jotai": "^2.0.2",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.7.0",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.3.0"
