--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
